# dwd-sws-vis

./: .gitignore  AGENTS.md  README.md  cursor.env  postBuild  pyproject.toml  requirements.txt
data/: swsKatalog.csv
notebooks/: interactive_map.ipynb  interactive_map.py  swsmos_dashboard.ipynb
notebooks/data/: timeseries_A280.csv  timeseries_A350.csv  timeseries_A442.csv  timeseries_A452.csv  timeseries_E320.csv  timeseries_F537.csv  timeseries_O252.csv  timeseries_O372.csv
src/dwd_sws/: __init__.py  dashboard.py  snapshot.py  stations.py  swsmos.py  swsmos_dashboard.py  timeseries.py  urls.py  variables.py
tests/: test_parser.py  test_stations.py
